--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,93 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+
+.blueBack {
+  background-color: #1c5380;
+  height: 300px;
+  width: 100%;
+}
+
+.whiteBack {
+  background-color: white;
+  height: 500px;
+}
+
+.father {
+  position: absolute;
+  font-size: 0;
+  top: 100px;
+  left: 200px;
+  width: 80%;
+  padding: 0px;
+}
+
+.img {
+  display: inline-block;
+  width: 45%;
+  vertical-align: top;
+  text-align: center;
+}
+
+.text {
+  display: inline-block;
+  font-size: 20px;
+  width: 45%;
+}
+
+
+.pictureBack {
+  background-image: url("frame.png");
+  background-size: cover;
+  padding: 50px;
+}
+
+.pictureBack h2 {
+  color: #06365f;
+}
+
+.text .home {
+  background-color: #1b65a1;
+  color: white;
+  font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  margin-left: 180px;
+  padding: 10px;
+  vertical-align: top;
+  border: 1px solid #0a4770;
+  box-shadow: 1px 1px 1px #05253a;
+  border-radius: 4px;
+}
+
+.android {
+margin-left: 50px;
+}
+
+.iphone {
+  margin-left: 20px;
+}
+
+footer ul li{
+  list-style-type: none;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+footer {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 50px;
+  text-decoration: none;
+  
+}
+
+footer a {
+  color: #2368a1;
+  text-decoration: none;
+  font-weight: 500;
 }
