--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,121 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+html {
+    box-sizing: border-box;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+}
+
+.container {
+    padding: 5% 0;
+    background-color: #51789B;
+    position: absolute;
+    height: 16%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+
+/* Main */
+
+.flex-container {
+    display: flex;
+}
+
+.left-side {
+    background-image: url('../images/phones.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 30%;
+    height: 500px;
+    margin-left: auto;
+}
+
+.right-side {
+    width: 40%;
+    height: 500px;
+    margin-right: auto;
+}
+
+
+/* Header */
+
+.brand {
+    position: relative;
+}
+
+.header button {
+    position: absolute;
+    width: 100px;
+    background-color: #668BAB;
+    border: 1px solid #1c5380;
+    border-radius: 2px;
+    margin-top: 20px;
+    margin-left: 70px;
+    padding: 8px;
+    color: #E3E8EE;
+    font-weight: bold;
+}
+
+.btn-house-icon {
+    float: left;
+}
+
+.btn-text {
+    vertical-align: sub;
+    margin-left: 7px;
+}
+
+
+/* Frame */
+
+.frame img {
+    position: relative;
+}
+
+.frame-text {
+    position: absolute;
+    top: 170px;
+    width: 30%;
+    padding-left: 40px;
+    color: #333;
+}
+
+.frame-text h2 {
+    color: #123A5F;
+}
+
+.frame-text img {
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+
+/* Footer */
+
+.footer {
+    width: 100%;
+    margin-top: 60px;
+    color: #51789B;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.list-inline {
+    list-style: none;
+    padding-left: 0;
+}
+
+.list-inline li {
+    display: inline;
+    margin-right: 10px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.font-grey {
+    color: grey;
 }
