--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,104 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.background {
+  background-image: url(../images/bgtile.png);
+  height: 226px;
+
+}
+
+.header{
+    padding-top: 25px;
+}
+
+.header img {
+  margin: 20px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+#login-button {
+  background-color: #1c5380;
+  border: none;
+  color: white;
+  padding: 0px 23px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+  float: right;
+  margin: 20px;
+  padding-left: 0px;
+  background-image: linear-gradient(to top, #1c5380 00%, white 1000%);
+  box-shadow: 0px 0px 1px black;
+}
+
+#login-button p {
+  float: right;
+  padding-top: 7px;
+}
+
+.right-side {
+  float:right;
+  position:relative;
+  padding: 20px;
+  width:67%;
+}
+
+.left-side {
+  position:absolute;
+  position:left;
+      padding: 29px;
+}
+
+.main {
+  background-image: url(/Users/dominiklasch/prework/code/lab-css-instagram-clone/starter-code/images/frame.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  padding: 40px 50px;
+}
+
+.downloadButton {
+  border: none;
+  background: none;
+      padding-left: 0px;
+}
+
+.footer{
+      text-align: center;
+      display:block;
+      width:100%;
+      clear:both;
+}
+
+.footer p{
+  text-transform: uppercase;
+  display: inline;
+  font-weight: bold;
+  color:#1c5380;
+  padding: 10px;
+}
+
+.footer span{
+  color: grey;
+  text-transform: uppercase;
+  display: inline;
+  font-weight: bold;
+  padding: 10px;
+
 }
