--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,93 +9,114 @@ body {
   margin: 0;
 }
 
-#blueSection{
+#blueBar{
   background-color: #1c5380;
-  height: 400px;
+  position: absolute;
   width: 100%;
-  position: absolute;
+  height: 350px;
 }
 
-#general{
+#central{
   position: relative;
-  padding-top: 200px;
   margin: 0 auto;
-  width: 800px;
+  top: 150px;
+  width: 900px;
+  height: 600px;
 }
 
-#mobile{
-  width: 20%;
-  height: 520px;
-}
-
-#centralBlock{
+#left{
+  background-image: url("../images/phones.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
   position: absolute;
-  width: 55%;
+  width: 350px;
+  height: 600px;
+  left: 0px;
+}
+
+#right{
+  position: absolute;
+  width: 500px;
+  height: 600px;
   right: 0px;
 }
 
-
-.bg{
-  background-color: white;
-  border-radius: 10px;
-  padding: 20px;
+#header{
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  top: 0px;
 }
 
-h1{
+#header > button{
+  position: absolute;
+  right: 10px;
+  top: 17px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #1c5380;
+  color: white;
+  border: 1px solid #06365f;
+  border-radius: 4px;
+}
+
+#header > button > img{
+  vertical-align: middle;
+  padding-right: 8px;
+}
+
+#photoBase{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: absolute;
+  width: 100%;
+  height: 480px;
+  bottom: 0px;
+}
+
+#text{
+  position: relative;
+  margin: 0 auto;
+  width: 85%;
+  height: 100px;
+}
+
+h2{
   font-size: 30px;
   color: #06365f;
 }
 
-button{
+p{
+  font-size: 16px;
+}
+
+#buttons{
   position: absolute;
-  top: 20px;
-  right: 0px;
-  padding: 7px;
-  background-color: #1c5380;
-  border-color: #06365f;
-  border-radius: 5px;
-  border-style: solid;
-  color: white;
+  bottom: 42px;
+  left: 38px;
 }
 
-button > img{
-  vertical-align: bottom;
-  padding-right: 10px;
-}
-
-.inline{
-  display: inline-block;
-}
-
-.botonApple{
-  background-image: url("../images/badge-iphone.png");
-}
-
-.botonAndroid{
-  background-image: url("../images/badge-android.png");
-}
-
-input{
-  width: 180px;
-  height: 60px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 10px;
-}
-
-footer{
+#footer{
+  position: absolute;
+  width: 100%;
   text-align: center;
-  margin-top: 60px;
+  bottom: 70px;
 }
 
 ul > li{
-  list-style-type: none;
   display: inline-block;
-  padding-right: 7px;
-  color: #06365f;
+  list-style-type: none;
+  font-weight: bold;
+  padding-right: 10px;
 }
 
-.esp{
+ul > li > a{
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.copyright{
+  padding-left: 20px;
   color: grey;
-  padding-left: 10px;
 }
