--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,81 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+margin:0;
+
+}
+* {
+  border: 1px solid red;
+}
+.header {
+background-color: blue;
+width: 100%;
+height: 300px;
+position: absolute;
+}
+
+.content {
+  position: relative;
+  text-align: center;
+  margin-top: 50px;
+}
+.telefonos{
+  width: 30%;
+  display: inline-block;
+}
+
+.buttomlogin{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  width: 50px;
+  display: inline-block;
+}
+
+.cuadrodescription{
+  width: 40%;
+  display:inline-block;
+  text-align: left;
+}
+
+.botonesstores {
+  margin-left: 10px;
+
+}
+.botonesstores img:nth-of-type(2){
+  margin-left: 10px;
+  text-align: left;
+}
+.bg {
+  background-color: white;
+  padding: 20px;
+}
+
+
+
+ul {
+  list-style: none;
+  text-align: center;
+  display: inline;
+}
+
+li {
+  list-style: none;
+  text-align: center;
+  display: inline-block;
+  text-transform: uppercase;
+  margin-left: 10px;
+  color: blue;
+}
+
+. botonesstores {
+  margin: 10px;
+}
+
+
+footer {
+  position: relative;
+  text-align: center;
+  margin-top: 200px;
+  margin-bottom: 100px;
 }
