--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,36 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+
+
 }
+h1{
+color: #06365f;
+}
+
+#home-bg{
+background-image: url(/Users/constantinosyenis/Documents/ironhack/lab-css-instagram-clone/starter-code/images/bgtile.png);
+height: 250
+}
+
+.header {
+}
+
+footer {
+height: 100px ;
+background-color::#06365f;
+}
+.iphone{
+float: left;
+}
+.container{
+background-image: url(/Users/constantinosyenis/Documents/ironhack/lab-css-instagram-clone/starter-code/images/frame.png);
+}
+
+footer {
+    position: relative;
+    font-size: 12px;
+    line-height: 16px;
+    display: block;
+  }
