--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -55,7 +55,7 @@ h2 {
   background: inherit;
   box-shadow: 0 0 20px #06365f;
   float: right;
-  margin: 20px 77px;
+  margin: 17px 30px 0 0;
   color: #fff;
   padding: 5px 10px;
   font-size: 18px;
