--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,25 @@
+
 /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
 
+/*Body CSS*/
 body {
+  background: #fff url('../images/bgtile.png') repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+
+.phones {
+  float: left;
+  margin-right: 100px;
+
+}
+
+.brand-and-home {
+  float: right;
+
 }
