--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+
+.container{
+  position:relative;
+  background-color: white;
+
+}
+
+
+
+
+
+.blue-background{
+  background-color: #1c5380;
+
+width:100%;
+top: 0;
+height:300px;
+
+}
+
+
+
+
+.iphone{
+  background-color: yellow;
+
+}
+
+
+.iphone-img{
+  margin-right:auto;
+  margin-left: 10%;
+  margin-top:150px;
+}
+
+
+
+
+
+
+.frame {
+  background-color: ;
+margin-left: 45%;
+margin-right: 10%;
+margin-top:50px;
+height:auto;
+position:relative;
+display:block;
+height:284px;
+}
+
+.white-frame{
+  ;
+  ;
+}
+
+.white-frame-text{
+  ;
+  margin-top:-300px;
+  margin-right: 10%;
+  margin-left:10%;
+
+  height: 284px;
+  overflow: hidden;
+  margin-bottom: 10%;
+min-height: 284px;
+max-width: 390px;
+
+
+}
+
+
+.title-in-white-frame{
+  text-align:left;
+  width:65%;
+}
+
+.bold-text{
+  font-weight: bold;
+}
+
+
+
+
+.appstore{
+  background-color:pink;
+}
+
+.lower-part{
+  background-color:brown;
 }
