--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,84 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+<html>{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing:    border-box;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+.background{
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+.backgroundBlue{
+  margin: 0px;
+  padding: 0px;
+  height: 40px;
+  width: 100%;
+  background-color: #3D5687;
+}
+
+.backgroundWhite{
+  margin: 0px;
+  padding: 0px;
+  height: 60%;
+  width: 100%;
+  background-color: #F5F5F8;
+}
+
+.head {
+  height: auto;
+  width: auto;;
+}
+
+.content{
+  position: absolute;
+  text-align: left;
+  width: 40%;
+  padding: 10%;
+}
+
+.head{
+  float:left;
+}
+
+.logIn{
+  box-sizing: border-box;
+  background-color: #516C9B;
+  border-color: #405A8A;
+  border-radius: 5px;
+  width: 30%;
+  height: 15%;
+  padding: 10% 5px 0px 5px;
+  float: right;
+
+}
+
+#instagram{
+  width: 60%;
+  height: auto;
+  float: left;
+  margin: 5%;
+}
+
+.logIn p{
+  float: right;
+}
+
+li{
+  display :inline;
+}
+
+footer{
+  width: 100%;
 }
