--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,7 +9,6 @@ body {
   margin: 0;
 }
 
-
 #blue-background {
   background-color: #1c5380;
   width: 100%;
@@ -17,11 +16,9 @@ body {
   position: absolute;
 }
 
-
 #all {
   width: 100%;
   height: 100%;
-  border: 3px solid yellow;
   margin-top: 100px;
   position: absolute;
 }
@@ -29,21 +26,14 @@ body {
 #column1-photos {
   position: relative;
   margin-left: 200px;
-  border: 3px solid pink;
   display: inline-block;
 }
 
 #column2-white {
 position: absolute;
-border: 4px solid green;
 left: 600px;
 right: 300px;
 display: inline-block;
-}
-
-
-.header {
-  border: 3px solid black;
 }
 
 #button {
@@ -55,137 +45,28 @@ height: 50px;
 width: 110px;
 color: white;
 border: 2px solid #06365f;
-background-color: #1c5380;
+background-color: #0072b1;
 border-radius: 5px;
 font-size: 1em;
-
+font-weight: bold;
+padding-left: 30px;
 }
 
 #home-image {
   display: inline-block;
   position: absolute;
-  left: 1px;
-  top:4px;
+  left: 4px;
+  top:12px;
+  right: 4px;
 }
-
-#capture {
-  background-color: white;
-  border-radius: 5px;
-  padding: 20px;
-
-}
-
-h1 {
-  color: #1c5380;
-  font-size: 2em;
-}
-
-
-
-#app-store {
-}
-
-#google-play {
-margin-right: 20px;
-}
-
-#footer {
-  text-transform: uppercase;
-  color: #45668e;
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 0px;
-  z-index: 1;
-  font-weight: 400;
-  font-size: 1em;
-
-
-
-}
-
-#copyright {
-  color: grey;
-  display: inline-block;
-}
-
-span {
-  border-right: 10px;
-  font-weight: bold;
-}
-
-
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
-
-
-#blue-background {
-  background-color: #1c5380;
-  width: 100%;
-  height: 350px;
-  position: absolute;
-}
-
-
-#all {
-  width: 100%;
-  height: 100%;
-  border: 3px solid yellow;
-  margin-top: 100px;
-  position: absolute;
-}
-
-#column1-photos {
-  position: relative;
-  margin-left: 200px;
-  border: 3px solid pink;
-  display: inline-block;
-}
-
-#column2-white {
-position: absolute;
-border: 4px solid green;
-left: 600px;
-right: 300px;
-display: inline-block;
-}
-
 
 .header {
-  border: 3px solid black;
-}
-
-#button {
-display: inline-block;
-position: absolute;
-top: 20px;
-right: 20px;
-height: 50px;
-width: 110px;
-color: white;
-border: 2px solid #06365f;
-background-color: #1c5380;
-border-radius: 5px;
-font-size: 1em;
-
-}
-
-#home-image {
-  display: inline-block;
-  position: absolute;
-  left: 1px;
-  top:4px;
+  height: 90px;
 }
 
 #capture {
+position: absolute;
+height: 350px;
   background-color: white;
   border-radius: 5px;
   padding: 20px;
@@ -197,155 +78,32 @@ h1 {
   font-size: 2em;
 }
 
-
-
 #app-store {
+  display: inline-block;
 }
 
 #google-play {
-margin-right: 20px;
+display: inline-block;
+margin-left: 20px;
 }
 
 #footer {
   text-transform: uppercase;
-  color: #45668e;
+  color: #0072b1;
   width: 100%;
   text-align: center;
   position: absolute;
   bottom: 0px;
   z-index: 1;
   font-weight: 400;
-  font-size: 1em;
-
-
-
+  font-size: 0.9em;
+  word-spacing: 10px;
+  font-weight: bold;
 }
 
 #copyright {
   color: grey;
   display: inline-block;
-}
-
-span {
-  border-right: 10px;
-  font-weight: bold;
-}
-
-
-
-
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
-
-
-#blue-background {
-  background-color: #1c5380;
-  width: 100%;
-  height: 350px;
-  position: absolute;
-}
-
-
-#all {
-  width: 100%;
-  height: 100%;
-  border: 3px solid yellow;
-  margin-top: 100px;
-  position: absolute;
-}
-
-#column1-photos {
-  position: relative;
-  margin-left: 200px;
-  border: 3px solid pink;
-  display: inline-block;
-}
-
-#column2-white {
-position: absolute;
-border: 4px solid green;
-left: 600px;
-right: 300px;
-display: inline-block;
-}
-
-
-.header {
-  border: 3px solid black;
-}
-
-#button {
-display: inline-block;
-position: absolute;
-top: 20px;
-right: 20px;
-height: 50px;
-width: 110px;
-color: white;
-border: 2px solid #06365f;
-background-color: #1c5380;
-border-radius: 5px;
-font-size: 1em;
-
-}
-
-#home-image {
-  display: inline-block;
-  position: absolute;
-  left: 1px;
-  top:4px;
-}
-
-#capture {
-  background-color: white;
-  border-radius: 5px;
-  padding: 20px;
-
-}
-
-h1 {
-  color: #1c5380;
-  font-size: 2em;
-}
-
-
-
-#app-store {
-}
-
-#google-play {
-margin-right: 20px;
-}
-
-#footer {
-  text-transform: uppercase;
-  color: #45668e;
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 0px;
-  z-index: 1;
-  font-weight: 400;
-  font-size: 1em;
-
-
-
-}
-
-#copyright {
-  color: grey;
-  display: inline-block;
-}
-
-span {
-  border-right: 10px;
-  font-weight: bold;
+  word-spacing: normal;
+  font-weight: lighter;
 }
