--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,45 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  overflow: auto;
+}
+
+/*----TEXT----*/
+p {
+  width: 400px;
+  float: right;
+  margin-right: 300px;
+
+}
+
+
+h2 {
+  float: right;
+  margin-right: 457px;
+}
+
+footer {
+  float: left;
+  margin-left: 15px;
+}
+
+
+
+
+/*----IMAGES----*/
+
+.frame {
+  float: right;
+  margin-right: 250px;
+  margin-top: 100px;
+  position: relative;
+  top: 40px;
+  height: 300px;
+  z-index: -1;
+}
+
+.iphone {
+  float: left;
+  margin-left: 250px;
+  margin-top: 40px;
 }
