--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,17 +7,16 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  overflow: auto;
+
 }
 
 /*----TEXT----*/
+
 p {
   width: 400px;
   float: right;
   margin-right: 300px;
-
 }
-
 
 h2 {
   float: right;
@@ -29,7 +28,11 @@ footer {
   margin-left: 15px;
 }
 
-
+.paragraph {
+  position: relative;
+  bottom: 250px;
+  right: 50px;
+}
 
 
 /*----IMAGES----*/
