--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,103 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blueheader {
+  background: url(../images/bgtile.png);
+  width: 100%;
+  height: 258px;
+}
+
+.content-middle {
+  display: block;
+  width: 900px;
+  margin: 0 auto;
+  padding-top: 75px;
+  overflow: auto;
+}
+
+.content-middle #phone {
+  box-sizing: border-box;
+  float: left;
+}
+
+main #brand {
+  box-sizing: border-box;
+  float: left;
+  margin-top: 30px;
+}
+
+div button {
+  box-sizing: border-box;
+  background-color: #06365f;
+  color: white;
+  text-align: right;
+  width: 70px;
+  height: 30px;
+  border: 0px;
+}
+
+main {
+  box-sizing: border-box;
+  float: left;
+  width: 58%;
+  padding-left: 45px;
+}
+
+main a {
+  background-color: #1c5380;
+  padding: 6px 11px 11px 0;
+  margin: 41px 7px 0 0;
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+  float: right;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+}
+
+img#home {
+  padding: 6px 11px 0px 12px;
+  margin-bottom: -4px;
+}
+
+.text-details {
+  box-sizing: border-box;
+  background: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  margin-top: 114px;
+  padding: 21px 44px 0 32px;
+  font-size: 16px;
+  font-weight: 200;
+}
+
+.download {
+  float: left;
+  padding-top: 19px;
+  padding-right: 20px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 24px;
+  box-sizing: border-box;
+  width: 250px;
+  margin: 0;
+}
+
+footer {
+  text-align: center;
+  font-size: 10px;
+  padding-top: 55px;
+}
+
+footer b {
+  padding: 10px;
+  color: #1c5380;
+  word-spacing: 16px;
+}
+
+footer span {
+  color: grey;
+}
