--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,113 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+}
+
+.wrapper {
+  margin: 0 auto;
+}
+
+.topHalf {
+  background-color: #4A7898;
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  z-index: -1;
+}
+
+.bottomHalf {
+  overflow: auto;
+  width: 68%;
+  padding-top: 150px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.iphoneImg {
+  float: left;
+  padding-right: 47px;
+}
+
+.cardWrapper {
+  width: 58%;
+  float: left;
+  box-sizing: border-box;
+  margin: 0% 0;
+}
+
+.cardHead {
+  background-color: #4A7898;
+  padding: 0 20px 0 20px;
+}
+
+header {
+  overflow: auto;
+}
+
+.brandImg {
+  width: 45%;
+  padding-bottom: 20px;
+}
+
+.loginButton {
+  background-color: #658EAB;
+  color: #E7ECF0;
+  float: right;
+  font-size: 15px;
+  border: 1px solid #436385;
+  border-radius: 1px;
+  padding: 8px 15px;
+}
+
+.loginButton:before {
+  background-image: url("../images/home.png");
+  content: ' ';
+  height: 20px;
+  width: 20px;
+  display: inline-block;
+  background-size: 100% 100%;
+  float: left;
+}
+
+.cardInfo {
+  border-radius: 2%;
+  padding: 20px 40px;
+  background-image: url("../images/frame.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.cardInfoButtons {
+  padding-left: 2px;
+}
+
+.cardHeader {
+  width: 46%;
+}
+
+.cardHeader h3 {
+  color: #1C5380;
+  line-height: 1.4;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 30%;
+  padding-top: 3%;
+  font-weight: 700;
+  font-size: 12px;
+}
+
+footer ul li {
+  display: inline-block;
+  padding-right: 10px;
+}
+
+li a {
+  text-decoration: none;
+  text-align: center;
+}
+
+.copyRight {
+  font-size: 12px;
 }
